# dataset-csv-generator

./: .gitignore  README.md  clf_csv_gen_gui.py  clf_csv_split_gui.py  requirements.txt
backup/: clf_csv_gen.py
doc/: CONFIGURE.md  INSTALL.md  TESTING.md  UPLOAD.md
src/: README.md  pyproject.toml  toml_gen.py
src/dataset_csv_generator/: about.py  desktop.py  prog_csv_gen.py  prog_csv_gen_gui.py  prog_csv_gen_gui_old.py  prog_csv_split.py  prog_csv_split_gui.py  prog_csv_split_gui_old.py
src/dataset_csv_generator/modules/: split.py
