[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataset_csv_generator"
version = "0.1.0"
description = "Generates CSV files from a classification dataset"
readme = "README.md"
authors = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
maintainers = [{name = "Fernando Pujaico Rivera", email = "fernando.pujaico.rivera@gmail.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-only WITH Classpath-Exception-2.0 OR BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["csv", "dataset"]
dependencies = [
    "PyQt5",
    "numpy",
    "scikit-learn",
    "WorkingWithFiles"
]

[project.urls]
"Bug Reports" = "https://github.com/trucomanx/DatasetCsvGenerator/issues"
"Funding" = "https://trucomanx.github.io/en/funding.html"
"Documentation" = "https://github.com/trucomanx/DatasetCsvGenerator/tree/main/doc"
"Source" = "https://github.com/trucomanx/DatasetCsvGenerator"

[project.scripts]
"csv-generator"     = "dataset_csv_generator.prog_csv_gen:main"
"csv-generator-gui" = "dataset_csv_generator.prog_csv_gen_gui:main"
"csv-split-gui"     = "dataset_csv_generator.prog_csv_split_gui:main"

[tool.setuptools]
packages = ["dataset_csv_generator", "dataset_csv_generator.modules"]

[tool.setuptools.package-data]
"dataset_csv_generator" = ["icons/logo.png"]
